--- a/package.json
+++ b/package.json
@@ -13,18 +13,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.3",
-    "bootstrap-fileinput": "^5.5.2",
     "chart.js": "^4.4.2",
     "datatables.net-bs5": "^2.0.1",
-    "datatables.net-plugins": "^2.0.2",
     "datatables.net-responsive-bs5": "^3.0.0",
-    "image-picker": "^0.3.1",
     "jquery": "^3.7.1",
-    "lightbox2": "^2.11.4",
-    "masonry-layout": "^4.2.2",
+    "jquery-ui": "^1.13.2",
     "select2": "^4.1.0-rc.0",
     "select2-bootstrap-5-theme": "^1.3.0",
     "vanilla-colorful": "^0.7.2",
     "vanilla-cookieconsent": "^3.0.0"
-  }
+  },
+  "version": "0.0.0"
 }
