update dockerfile & docker composer, add dockerignore, fix default icon

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=kzScores
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+
+APP_THEME="dark"
+APP_ICON="fas fa-dice"
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
