fix select2 for touchscreen, scroll to current player, some display improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   app:
     build:
       context: .
+    # image: kinouzero/kzscores:latest
     environment:
       - PUID=1000
       - PGID=1000
