--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.3",
+    "bootstrap5-toggle": "^5.0.4",
     "chart.js": "^4.4.2",
     "datatables.net-bs5": "^2.0.1",
     "datatables.net-responsive-bs5": "^3.0.0",
